added ajax call too get all workout and display them

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "homepage": "https://github.com/zhouyiartemiswang/mongo_express_fitness_tracker#readme",
     "dependencies": {
         "express": "^4.17.1",
+        "mongojs": "^3.1.0",
         "mongoose": "^5.10.11",
         "morgan": "^1.10.0"
     }
